Version 1.2.0
Minor Changes
- Added Structure Helper as a dependency